code cleaning, Java11 compatibility