@@ -101,11 +101,11 @@ public class HistoryServiceTest {
 	public void testReadExtremValueBetweenWithCache() throws Exception {
 
 		Object[][] input = new Object[][] { //
-				{ new BigDecimal(400), HistoryValueType.MIN, null, new Integer(100) }, //
-				{ new BigDecimal(400), HistoryValueType.MAX, null, new Integer(400) }, //
-				{ new BigDecimal(80), HistoryValueType.MIN, null, new Integer(80) }, //
-				{ new BigDecimal(80), HistoryValueType.MAX, null, new Integer(200) }, //
-				{ new BigDecimal(80), HistoryValueType.MIN, TimeRange.EVENING, new Integer(100) }, //
+				{ new BigDecimal(400), HistoryValueType.MIN, null, Integer.valueOf(100) }, //
+				{ new BigDecimal(400), HistoryValueType.MAX, null, Integer.valueOf(400) }, //
+				{ new BigDecimal(80), HistoryValueType.MIN, null, Integer.valueOf(80) }, //
+				{ new BigDecimal(80), HistoryValueType.MAX, null, Integer.valueOf(200) }, //
+				{ new BigDecimal(80), HistoryValueType.MIN, TimeRange.EVENING, Integer.valueOf(100) }, //
 		};
 
 		for (Object[] testcase : input) {
